# graphwalker-rs

./: .gitignore  Cargo.toml  README.md
crates/app/: Cargo.toml
crates/app/src/: main.rs
crates/app/tests/: convert_tests.rs  offline_tests.rs  online_tests.rs
crates/app/tests/models/: login.dot
crates/graph/: Cargo.toml
crates/graph/src/: lib.rs
crates/graph/tests/: tests.rs
crates/io/: Cargo.toml  README.md
crates/io/src/: lib.rs
crates/io/src/dot/: read.rs  write.rs
crates/io/src/json/: read.rs  write.rs
crates/io/src/parsers/: generator.rs
crates/io/tests/: tests.rs
crates/machine/: Cargo.toml
crates/machine/src/: context.rs  lib.rs  profile.rs
crates/machine/src/generator/: random.rs
crates/machine/src/generators/: generator.rs
crates/machine/src/stop_condition/: edge_coverage.rs
crates/machine/src/stop_conditions/: stop_condition.rs
crates/machine/tests/: machine_test.rs  tests.rs
crates/rest/: Cargo.toml
crates/rest/src/: handlers.rs  lib.rs  routes.rs
crates/rest/tests/: rest_test.rs
doc/profiling/: README.md
models/: SuperLarge.json  simpleMultiModel.json
models/faultyModels/: notUniqueModelId.json
resources/models/: SuperLarge.json  login.json  petclinic.json  simple.json  simpleMultiModel.json  simpleSingleModel.json
resources/results/: login_1234.json  login_ignore_guards_870151202047466989.json  petclinic_1234.json  simpleMultiModel_1234.json  simpleSingleModel_1234.json
src/: main.rs
src/graph/: model.rs
src/io/: mod.rs  read.rs
src/io/dot/: read.rs  write.rs
src/io/json/: read.rs  write.rs
