[package]
name = "graphwalker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0"
dot-writer = "0.1.2"
serde = { version = "1.0.132", features = ["derive"] }
serde_derive = "1.0.132"
serde_json = "1.0.73"
