[package]
name = "graphwalker"
version = "0.1.0"
edition = "2021"


[dependencies]
graph = { path = "../graph"}
io = { path = "../io"}
machine = { path = "../machine"}
clap = "4.0.26"
env_logger = "0.10.0"
log = "0.4.17"
exitcode = "1.1.2"
serde_json = "1.0.87"

[dev-dependencies]
assert_cmd = "2.0.8"
predicates = "3.0.2"