[package]
name = "graphwalker"
version = "0.1.0"
edition = "2021"


[dependencies]
graph = { path = "../graph"}
io = { path = "../io"}
machine = { path = "../machine"}
rest = { path = "../rest"}
clap = "4.4.3"
env_logger = "0.10.0"
log = "0.4.20"
exitcode = "1.1.2"
serde_json = "1.0.107"

[dev-dependencies]
assert_cmd = "2.0.12"
predicates = "3.0.4"
