[package]
name = "machine"
version = "0.1.0"
edition = "2021"


[dependencies]
graph = { path = "../graph" }
serde = { version = "1.0.188", features = ["derive"] }
serde_derive = "1.0.188"
log = "0.4.20"
fastrand = "2.0.1"
serde_json = { version = "1.0.108", features = ["preserve_order"] }
evalexpr = "11.1.0"

[dev-dependencies]
io = { path = "../io" }
pretty_assertions = "1.4.0"
assert-json-diff = "2.0.2"
